--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
-    "build": "next build --turbopack",
+    "build": "next build",
     "start": "next start",
     "lint": "eslint"
   },
@@ -12,6 +12,7 @@
     "@aptos-labs/ts-sdk": "^1.39.0",
     "@aptos-labs/wallet-adapter-ant-design": "^5.2.0",
     "@aptos-labs/wallet-adapter-react": "^7.1.0",
+    "@kanalabs/aggregator": "^0.7.14",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-popover": "^1.1.15",
@@ -28,6 +29,7 @@
     "lightweight-charts": "^5.0.8",
     "lucide-react": "^0.544.0",
     "next": "15.5.4",
+    "pinata": "^2.5.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "recharts": "^3.2.1",
@@ -46,5 +48,8 @@
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.17",
     "typescript": "^5"
+  },
+  "overrides": {
+    "@aptos-labs/ts-sdk": "^1.39.0"
   }
 }
